@@ -502,7 +502,9 @@ public class CacheBuilderTest extends TestCase {
     computationShouldWait.set(true);
 
     final AtomicInteger computedCount = new AtomicInteger();
-    ExecutorService threadPool = Executors.newVirtualThreadPerTaskExecutor();
+    // Refactoring this causes test to hang for a while and eventually give wrong result
+    // https://github.com/ponder-lab/guava/actions/runs/9736322153/job/26866789783#step:6:328
+    ExecutorService threadPool = Executors.newFixedThreadPool(nThreads);
     final CountDownLatch tasksFinished = new CountDownLatch(nTasks);
     for (int i = 0; i < nTasks; i++) {
       final String s = "a" + i;
